--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,7 +3,7 @@ name: Build Android APK
 on:
   push:
     branches: [ main, master ]
-  workflow_dispatch:  # Cho phép chạy thủ công từ GitHub UI
+  workflow_dispatch:
 
 jobs:
   build:
@@ -17,7 +17,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
 
       - name: Setup Java 17
         uses: actions/setup-java@v4
@@ -34,13 +33,20 @@ jobs:
       - name: Install Expo CLI
         run: npm install -g @expo/cli@latest
 
-      - name: Generate native Android project
+      - name: Generate native Android project (clean)
         run: npx expo prebuild --platform android --clean
         env:
           EXPO_NO_TELEMETRY: 1
 
       - name: Make gradlew executable
         run: chmod +x android/gradlew
+
+      - name: Clean Gradle build cache
+        run: |
+          cd android
+          ./gradlew clean --no-daemon
+        env:
+          GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -Dorg.gradle.daemon=false"
 
       - name: Build Release APK
         run: |
@@ -62,17 +68,7 @@ jobs:
         with:
           tag_name: v${{ github.run_number }}
           name: "BARRIER App v${{ github.run_number }}"
-          body: |
-            ## 📱 BARRIER App - Android APK
-            
-            ### Cách cài đặt:
-            1. Tải file `app-release.apk` bên dưới
-            2. Bật **Unknown Sources** trên Android (Settings → Security)
-            3. Mở file APK → Install
-            4. Pair HC-05 trong Android Settings → Bluetooth trước
-            5. Mở app BARRIER → CONNECT
-            
-            > Build tự động bởi GitHub Actions
+          body: "Build tự động bởi GitHub Actions"
           files: android/app/build/outputs/apk/release/app-release.apk
           draft: false
           prerelease: false
