--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "prebuild": "expo prebuild"
+    "android": "expo run:android"
   },
   "dependencies": {
     "expo": "~51.0.28",
@@ -13,6 +12,8 @@
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
+    "expo-document-picker": "~13.0.1",
+    "expo-file-system": "~17.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-bluetooth-classic": "1.73.0-rc.17",
